# clanker

./: Cargo.toml  README.md
src/: clanker.rs  color.rs  compress.rs  git.rs  main.rs  prompt.rs  right_prompt.rs  title.rs
src/compress/: gct.rs
