[package]
name = "clanker"
version = "0.4.1"
authors = ["Gregory Meyer <gregjm@umich.edu>"]
edition = "2018"
description = "Minimalistic command prompt for fish."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Gregory-Meyer/clanker"

[dependencies]
git2 = "^0.8.0"
libc = "^0.2.49"
unicode-segmentation = "^1.2.1"

[[bin]]
name = "clanker-prompt"
path = "src/prompt.rs"

[[bin]]
name = "clanker-right-prompt"
path = "src/right_prompt.rs"

[[bin]]
name = "clanker-title"
path = "src/title.rs"
