[package]
name = "clanker"
version = "0.5.3"
authors = ["Gregory Meyer <gregjm@umich.edu>"]
edition = "2018"
description = "Minimalistic command prompt for fish."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Gregory-Meyer/clanker"

[dependencies]
dirs = "^2.0.2"
libc = "^0.2.69"
libgit2-sys = "^0.12.3"
unicode-segmentation = "^1.6.0"

[[bin]]
name = "clanker-prompt"
path = "src/prompt.rs"

[[bin]]
name = "clanker-right-prompt"
path = "src/right_prompt.rs"

[[bin]]
name = "clanker-title"
path = "src/title.rs"

[lib]
name = "clanker"
path = "src/clanker.rs"
bench = true
