[package]
name = "clanker"
version = "0.7.0"
authors = ["Gregory Meyer <me@gregjm.dev>"]
edition = "2018"
description = "Minimalistic command prompt for fish."
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Gregory-Meyer/clanker"

[dependencies]
dirs = "^2.0.2"
libc = "^0.2.69"
libgit2-sys = "^0.12.3"
unicode-segmentation = "^1.6.0"
clap = "^2.33.0"
